crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_slack__adaptivecard_columns.snap
---
source: crates/provider-tests/tests/provider_harness.rs
expression: value
---
{
  "event": {
    "channel": "slack",
    "id": "<FIXED>",
    "metadata": {
      "universal": "true"
    },
    "session_id": "slack",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "adaptivecard columns message from slack"
  },
  "ok": true
}
