crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_slack__adaptivecard_inputs.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 878
expression: value
---
{
  "event": {
    "id": "<FIXED>",
    "inputs": [
      {
        "id": "<FIXED>",
        "placeholder": "Name"
      },
      {
        "choices": [
          "a",
          "b"
        ],
        "id": "<FIXED>"
      },
      {
        "id": "<FIXED>",
        "title": "Opt in"
      }
    ],
    "provider": "slack",
    "text": "adaptivecard inputs message from slack",
    "timestamp": "<FIXED>",
    "type": "adaptivecard",
    "variant": "inputs"
  },
  "ok": true
}
