crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_slack__reply_thread.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 878
expression: value
---
{
  "event": {
    "channel": "slack-channel",
    "id": "<FIXED>",
    "provider": "slack",
    "reply_to": "slack-msg-1",
    "text": "reply thread message from slack",
    "thread_id": "slack-thread-1",
    "timestamp": "<FIXED>",
    "type": "message"
  },
  "ok": true
}
