crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_slack__simple_text.snap
---
source: crates/provider-tests/tests/provider_harness.rs
expression: value
---
{
  "event": {
    "channel": "slack-channel",
    "id": "<FIXED>",
    "metadata": {
      "channel": "slack-channel",
      "universal": "true"
    },
    "session_id": "slack-channel",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "simple text message from slack",
    "to": [
      {
        "id": "<FIXED>"
      }
    ]
  },
  "ok": true
}
